--- a/MSCS_634__ProjectDeliverable__3.ipynb
+++ b/MSCS_634__ProjectDeliverable__3.ipynb
@@ -29,6 +29,25 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### 1. Overview\n",
+        "\n",
+        "Deliverable 3 focuses on applying unsupervised learning techniques to discover hidden patterns in the dataset. Unlike Deliverables 1 and 2, which focused on data preprocessing and predictive modeling, this deliverable emphasizes:\n",
+        "\n",
+        "Clustering Analysis (K-Means)\n",
+        "\n",
+        "Association Rule Mining (Apriori Algorithm)\n",
+        "\n",
+        "Pattern Interpretation and Real-World Applications\n",
+        "\n",
+        "The goal is to extract meaningful insights without using a predefined target variable."
+      ],
+      "metadata": {
+        "id": "Ff8WBP67ADA3"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "gDo9tDdYll6Q"
       },
