--- a/MSCS_634__ProjectDeliverable__3.ipynb
+++ b/MSCS_634__ProjectDeliverable__3.ipynb
@@ -24,7 +24,7 @@
         "Bharath Singareddy  \n",
         "\n",
         "\n",
-        "**Feruary 14, 2026**\n"
+        "**February 14, 2026**\n"
       ]
     },
     {
