--- a/MSCS_634__ProjectDeliverable__3.ipynb
+++ b/MSCS_634__ProjectDeliverable__3.ipynb
@@ -21,8 +21,11 @@
         "Avijit Saha  \n",
         "Pranoj Thapa  \n",
         "Sandip KC  \n",
-        "Bharath Singareddy  \n",
+        "Bharath Singareddy\n",
         "\n",
+        "**Advanced Big Data and Data Mining (MSCS-634-M20)**  \n",
+        "\n",
+        "Dr. Satish Penmatsa\n",
         "\n",
         "**February 14, 2026**\n"
       ]
